fix: fix z-index menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,6 +76,7 @@ h1 {
   top: -51px;
   background: #fff;
   box-shadow: 0px 3px 0px #000;
+  z-index: 1;
 }
 
 .menu summary {
